# agora

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.ja.md  README.md  README.zh-TW.md  TEST_SUMMARY.md  api_middleware.py  app_factory.py  dashboard_api.py  docker-compose.prod.yml  docker-compose.yml  export_utils.py  main.py  models.py  monitoring.py  nginx.conf  performance.py  poll_management.py  pyproject.toml  requirements.txt  run_agora.py  run_agora_debug.py  scheduler.py  search_utils.py  security.py  slack_handlers.py  start_app.py  start_slack_app.py  start_without_slack.py  templates.py  test_agora.py  test_error_handling.py  test_solid_architecture.py
.claude/: settings.local.json
.github/workflows/: ci-cd.yml
api/: __init__.py  admin.py  auth.py  polls.py
config/: config.py  config_validator.py
database/: __init__.py  config.py  database.py  migrations.py
docs/: admin.md  api.md  configuration.md  installation.md  monitoring.md  overview.md  quick-start.md  security.md  usage.md
docs/architecture/: solid-principles.md  tech-stack.md
docs/claude-code/: project-overview.md  project-structure.md  quick-start.md  references.md
docs/deployment/: docker.md  production.md
docs/development/: setup.md  standards.md  workflow.md
docs/testing/: guidelines.md  performance.md
documentation/: Agora_MVP_Specification.markdown  DEPLOYMENT.md  SLACK_ERROR_HANDLING_SUMMARY.md  SOLID_ARCHITECTURE.md
scripts/: deploy.sh
services/: __init__.py  abstractions.py  container.py  factory.py  implementations.py
static/css/: components.css  dashboard.css
static/js/: api.js  components.js  dashboard.js
strategies/: __init__.py  export.py  validation.py
templates/: admin_dashboard.html
tests/: test_enhanced_api.py  test_enhanced_di.py  test_enhanced_strategies.py  test_integration.py  test_integration_complete.py  test_new_features.py  test_performance.py
